--- a/index.ipynb
+++ b/index.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "## Partitioning a Sample Space\n",
     "\n",
-    "the Law of Total Probabiliyy can be used to calculate P(B). The law requires that you have a set of disjoint events Ai that collectively \"cover\" the event B. Then, instead of calculating P(B) directly, you add up the intersection of B with each of the events Ai. Let's see this graphically below:"
+    "The Law of Total Probability can be used to calculate P(B). The law requires that you have a set of disjoint events Ai that collectively \"cover\" the event B. Then, instead of calculating P(B) directly, you add up the intersection of B with each of the events Ai. Let's see this graphically below:"
    ]
   },
   {
@@ -329,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
